--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.search {
+  background: black;
+  width: 100%;
+  height: 100px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
